test/cases/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=x86_64-linux,x86_64-macos
// link_libc=true
//
// :?:?: error: root source file struct 'tmp' has no member named 'main'
